Refactor test and implement validations